--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <b><i><a href="index.html" target="_blank">перейти на главную</a></i>
+    <b><i><a href="index.html" target="_blank">перейти на главную</a></i><br>
+        <img src="https://img.freepik.com/premium-vector/white-cabbage-from-multicolored-paints-splash-of-watercolor-colored-drawing-realistic_537015-50.jpg"
+            alt="Капуста" width="200px">
 
 </body>
 
